--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-
-    </header>
     <nav id="sidebar">
         <div class="logo">
             <!-- img -->
@@ -48,7 +45,34 @@
         </div>
     </nav>
     <main>
-
+        <header>
+            <div class="search-area">
+                <label for="search-field"> <!--img--> </label>
+                <input type="text" id="search-field" class="search-input">
+            </div>
+            <div class="profile-area">
+                <!--img-->
+                <div>
+                    <!--Icon-->
+                    <h3>Jhon Doe</h3>
+                </div>
+            </div>
+            <div class="greetings-area">
+                <!--Icon-->
+                <div class="greeting-text">
+                    <p>Hi there,</p>
+                    <h2>Jhon Doe (@JhonD)</h2>
+                </div>
+            </div>
+            <div class="button-area">
+                <button>New</button>
+                <button>Update</button>
+                <button>Share</button>
+            </div>
+        </header>
+        <div class="dashBoard">
+            
+        </div>
     </main>
 </body>
 </html>
