feat: added structure of Main section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,120 @@
             </div>
         </header>
         <div class="dashBoard">
-            
+            <div class="projects-area">
+                <div class="project">
+                    <h1>Super Cool Project</h1>
+                    <p>Sed tempus ut lacus ut scelerisque. 
+                    Supendisse sollicitudin nibh erat, 
+                    id facilisis felis accumsan nec.</p>
+                    <div class="projects-bttns">
+                        <!--img-->
+                        <!--img-->
+                        <!--img-->
+                    </div>
+                </div>
+                <div class="project">
+                    <h1>Less Cool Project</h1>
+                    <p>Nullam condimentum ipsum ut lectus vehicula consectetur.
+                        Quisque sed dolor ticidunt, consectetur sapien et, facilisis dolor.
+                        Duis sem purus, dignissim ut sapiens in, varius pellentesque lacus.
+                    </p>
+                    <div class="projects-bttns">
+                        <!--img-->
+                        <!--img-->
+                        <!--img-->
+                    </div>
+                </div>
+                <div class="project">
+                    <h1>Imposible App</h1>
+                    <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+                    <div class="projects-bttns">
+                        <!--img-->
+                        <!--img-->
+                        <!--img-->
+                    </div>
+                </div>
+                <div class="project">
+                    <h1>Easy Peasy App</h1>
+                    <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam.
+                    Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+                    <div class="projects-bttns">
+                        <!--img-->
+                        <!--img-->
+                        <!--img-->
+                    </div>
+                </div>
+                <div class="project">
+                    <h1>Ad Blocker</h1>
+                    <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis.
+                    Aliquam sed malesuada eros.</p>
+                    <div class="projects-bttns">
+                        <!--img-->
+                        <!--img-->
+                        <!--img-->
+                    </div>
+                </div>
+                <div class="project">
+                    <h1>Money Maker</h1>
+                    <p>SPraesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex.
+                    Pellentesque mollis nec sem vel aliquam.</p>
+                    <div class="projects-bttns">
+                        <!--img-->
+                        <!--img-->
+                        <!--img-->
+                    </div>
+                </div>
+            </div>
+            <div class="announ-and-trending">
+                <section class="announcements">
+                    <h3>Announcements</h3>
+                    <div class="announcement-card">
+                    <h4>Site Maintenance</h4>
+                    <p>The site will be down on Friday...</p>
+                    </div>
+                    <div class="announcement-card">
+                    <h4>Community Share Day</h4>
+                    <p>Join us to share what you’ve built...</p>
+                    </div>
+                    <div class="announcement-card">
+                    <h4>Updated Privacy Policy</h4>
+                    <p>We’ve made some changes to our policy...</p>
+                    </div>
+                </section>
+
+                <!-- Trending -->
+                <section class="trending">
+                    <h3>Trending</h3>
+                    <div class="trending-user">
+                    <img src="https://via.placeholder.com/30" alt="Avatar">
+                    <div>
+                        <p>@tegan</p>
+                        <p>World Peace Builder</p>
+                    </div>
+                    </div>
+                    <div class="trending-user">
+                    <img src="https://via.placeholder.com/30" alt="Avatar">
+                    <div>
+                        <p>@morgan</p>
+                        <p>Super Cool Project</p>
+                    </div>
+                    </div>
+                    <div class="trending-user">
+                    <img src="https://via.placeholder.com/30" alt="Avatar">
+                    <div>
+                        <p>@kendall</p>
+                        <p>Life Changing App</p>
+                    </div>
+                    </div>
+                    <div class="trending-user">
+                    <img src="https://via.placeholder.com/30" alt="Avatar">
+                    <div>
+                        <p>@alex</p>
+                        <p>No Traffic Maker</p>
+                    </div>
+                    </div>
+                </section>
+            </div>
         </div>
     </main>
 </body>
